--- a/1.DAL/1.DAL.csproj
+++ b/1.DAL/1.DAL.csproj
@@ -14,4 +14,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="IRepositoties\" />
+    <Folder Include="Repositoties\" />
+  </ItemGroup>
+
 </Project>
