--- a/3.PresentationLayers/3.PresentationLayers.csproj
+++ b/3.PresentationLayers/3.PresentationLayers.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,6 +7,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\2.GUI\2.GUI.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Utilities\" />
+    <Folder Include="Views\" />
   </ItemGroup>
 
 </Project>
